Added health report endpoint.
